<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageViewImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_warning_black_24dp" />

    <ImageView
        android:id="@+id/imageViewTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageViewImportant"
        app:srcCompat="@drawable/ic_check_box_outline_blank_black_24dp" />

    <ImageView
        android:id="@+id/imageViewIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageViewTodo"
        app:srcCompat="@drawable/ic_wb_incandescent_black_24dp" />

    <TextView
        android:id="@+id/txtTitle_show_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewIdea"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/title_hint"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/txtDescription_show_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle_show_note"
        android:layout_alignStart="@+id/txtTitle_show_note"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:text="@string/description_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txtReminder_show_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription_show_note"
        android:layout_alignStart="@+id/txtDescription_show_note"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:text="Has or not reminder"

        />

    <TextView
        android:id="@+id/txtDate_show_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtReminder_show_note"
        android:layout_alignStart="@+id/txtReminder_show_note"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:text="Date" />

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/ok_button" />
</RelativeLayout>