<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="8dp"
        app:cardBackgroundColor="#D8EBF6"
        app:cardCornerRadius="12dp"
        app:cardElevation="18sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light">

            <ImageView
                android:id="@+id/imageViewDelete"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/ic_baseline_delete_sweep_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/imageViewDelete"
                android:text="DELETE"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutABorrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_icons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxIdea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1.2"
                    android:enabled="false"
                    android:text="@string/idea_checkbox" />


                <CheckBox
                    android:id="@+id/checkBoxTodo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1.5"
                    android:enabled="false"
                    android:text="@string/todo_checkbox" />

                <CheckBox
                    android:id="@+id/checkBoxImportant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1.8"
                    android:enabled="false"
                    android:text="@string/important_checkbox" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title :    " />

                <TextView
                    android:id="@+id/tv_Title_CardView_ToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="Title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description  :" />

                <TextView
                    android:id="@+id/tv_Description_CardView_ToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="Descripcion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reminder Date:" />

                <TextView
                    android:id="@+id/tv_Reminder_CardView_ToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="Reminder Date" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>